added toutouwai distance power analysis

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -14280,3 +14280,10 @@ fixed sequences.},
   year={2007},
   publisher={Nature Publishing Group}
 }
+
+@phdthesis{richard2007demography,
+  title={Demography and distribution of the North Island robin (Petroica longipes) in a fragmented agricultural landscape of New Zealand: a thesis presented in partial fulfilment of the requirements for the degree of Doctorate of Philosophy in Ecology at Massey University, Palmerston North, New Zealand},
+  author={Richard, Yvan},
+  year={2007},
+  school={Massey University}
+}
