--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -2432,29 +2432,28 @@ mjf <- ulam(
 
 ##### T.Q1 Does a flexibility manipulation alter dispersal timing (1.1) and distance (1.2), as well as the likelihood that juvenile toutouwai will disperse beyond the protection of Zealandia’s fence and attempt to establish in the adjacent urban area (1.3)?
 
+
 ###### The model: dispersal timing (1.1)
  
 *Bayesian model for a zero-inflated poisson distribution:*
   
   $D_i$ ~ Zero-inflated Poisson($p_i$,$lambda_i$)
 
-$D_i$ is how many days before the cut-off of observations at 112 days individuals dispersed (for example, if a bird dispersed 50 days after fledging, D_i is 112-50=72); the subtraction covers cases where the age at dispersal would be very late such that some birds might disperse after day 112 post-fledging. The latter individuals will be included with the non-dispersers as having a zero value. $lambda_i$ is the mean of the Poisson distribution describing the average day (and variance) for individuals who have dispersed. A zero inflated Poisson distribution was used because a small percentage of individuals do not disperse in their first season (zero values) and individuals who do disperse have a response variable that is a count number of days post-fledging do so within a relatively short period, which is captured by the Poisson distribution which counts the number of days [@mcelreath2020statistical].
+$D_i$ is how many days before the cut-off of observations at 112 days individuals dispersed (for example, if a bird dispersed 50 days after fledging, D_i is 112-50=72); the subtraction covers cases where the age at dispersal would be very late such that some birds might disperse after day 112 post-fledging. The latter individuals will be included with the non-dispersers as having a zero value. $lambda_i$ is the mean of the Poisson distribution describing the average day (and variance) for individuals who have dispersed. A zero inflated Poisson distribution was used because a small percentage of individuals do not disperse in their first season (zero values) and individuals who do disperse have a response variable that is a count number of days post-fledging do so within a relatively short period, which is captured by the Poisson distribution which counts the number of days [@mcelreath2020statistical]. These patterns are described by [@richard2007demography], which shows that only a small minority of individuals does not disperse, and that dispersers were observed to leave their natal territory on average 47.5 days after fledging, with a range between 32-72 days. We assume that both the likelihood to disperse and the day at which dispersers leave might differ between individuals in the manipulated and the control conditions:
 
 log($p_i$) = $\gamma_p$[condition] + $\alpha_p$[parentid],[condition]
 
-log($lambda_i$) = $\gamma_l$[condition] + $\alpha_l$[parentid],[condition]
-
-the two $\gamma$[condition] estimates reflect the difference between control and manipulated birds for the probability to not disperse ($\gamma_p$) and when to disperse ($\gamma_l$) and the two $\alpha$[parentid],[condition] are the effects for individuals born to the same parents in each condition. The Bayesian model was developed using @mcelreath2020statistical as a guide.
+The two $\gamma$[condition] estimates reflect the difference between control and manipulated birds for the probability to not disperse ($\gamma_p$) and when to disperse ($\gamma_l$). The Bayesian model was developed using @mcelreath2020statistical as a guide.
 
 ###### Power analysis (1.1)
 
-We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in age at which individuals disperse after fledging (Figure 10). We simulated the age at which individuals would disperse in the control condition (with averages of 36, 48, or 72 days after fledging), and assumed that manipulated individuals might disperse sooner. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the contrast in average time at which individuals disperse. The model also accounts for differences in the likelihood to not disperse at all between control and manipulated birds, but we did not exame this here in the simulation given that the number of individuals who will not disperse is likely to be very low. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero, indicating that there would be a clear difference between control and manipulated birds.
+We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in age at which individuals disperse after fledging (Figure 10). We simulated the age at which individuals would disperse in the control condition (with averages of 36, 48, or 72 days after fledging), and assumed that manipulated individuals might disperse sooner. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the contrast in average time at which individuals disperse. The model also accounts for differences in the likelihood to not disperse at all between control and manipulated birds, but we did not examine this here in the simulation given that the number of individuals who will not disperse is likely to be very low. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero, indicating that there would be a clear difference between control and manipulated birds.
 
 If the mean ratio of estimates below zero is close to 0.5, the model assumes that the age at which individuals disperse is similar for control and manipulated birds. If the ratio is close to zero, the model assumes individuals have changed their behavior and disperse earlier when they were manipulated. We find that for changes smaller than 1 standard deviation (which equals roughly 7 days), models are likely to assume that there are no differences between control and manipulated individuals even with large sample sizes. If the contrast in time of dispersal of manipulated compared to control individuals is 1 standard deviation, on average 92% of the posterior of the model based on a sample size of 20 individuals will be larger than zero. This means that the model is quite certain there is a contrast that is larger than zero. 
 
-In general, with sample sizes at or above 20 and mean contrasts of 1 standard deviation or higher, it is highly likely that the model will indicate that manipulated individuals have changed their behavior. Mean contrasts of less than 1 standard deviation can still be detected, however there is a higher risk that there will be a false negative (27% risk of a false negative with a sample size of 20 when the contrast is 0.25 standard deviations/2 days). 
+In general, with sample sizes at or above 20 and mean contrasts between manipulated and control individuals of 1 standard deviation or higher, it is highly likely that the model will indicate that manipulated individuals have changed their behavior. Mean contrasts of less than 1 standard deviation can still be detected, however there is a higher risk that there will be a false negative (27% risk of a false negative with a sample size of 20 when the contrast is 0.25 standard deviations = ~2 days earlier dispersal). 
 
-To estimate the risk of detecting false positives, we set the mean change in age of dispersal for manipulated individuals compared to control individuals to zero so there was no change. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 20, <7% have a ratio smaller than 0.1, meaning that the risk of having a false positive is low. 
+To estimate the risk of detecting false positives, we set the mean change in age of dispersal for manipulated individuals compared to control individuals to zero so there was no change. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 20, <7% of the simulations have a ratio smaller than 0.1, meaning that the risk of having a false positive is low. 
 
 ```{r touq1timingsimulation, eval=F}
 library(rethinking)
@@ -2698,7 +2697,7 @@ mtext("Ratio of estimates below zero",side=2,line=3, cex=1.2)
 
 ###### Run this model on the actual data (1.1)
 
-Run the code below to determine whether the manipulated birds differ from the control individuals in their age of dispersal. A contrast will be run to determine whether there is a difference between the conditions: if all values of the confidence interval are on one side of zero, then there was a difference; if the confidence interval crosses zero, then there was no difference.
+Run the code below to determine whether the manipulated individuals differ from the control individuals in their age of dispersal. A contrast will be run to determine whether there is a difference between the conditions: if all values of the confidence interval are on one side of zero, then there was a difference; if the confidence interval crosses zero, then there was no difference.
 
 ```{r touq1.1model, eval=F}
 library(rethinking)
@@ -2740,13 +2739,311 @@ precis( diff_g )
 
 ###### The model: dispersal distance (1.2)
 
+*Bayesian model for a gamma-poisson distribution:*
+  
+  $D_i$ ~ Gamma-Poisson($lambda_i$,$phi_i$)
+
+$D_i$ is the distance in meters that individuals are found away from their parents' territory on day 112 after they fledged, $lambda_i$ is the mean of the poisson describing the distance individuals who have dispersed are found on average away from their parents' territory, and $phi_i$ controls the variance. A gamma-poisson distribution was used because the dispersal distance is a non-negative count, almost all individuals disperse, but the distribution is skewed. Most individuals disperse not very far, but a small proportion can disperse for large distances. These patterns are described by [@richard2007demography], which shows that the average dispersal distance ~1,000m and the maximum dispersal distance is ~10,000m. We assume that distance dispersers move might differ between individuals in the manipulated and the control conditions:
+
+log($lambda_i$) = $\gamma_l$[condition]
+
+The $\gamma$[condition] reflects the average distance individuals disperse for each condition (control/manipulated) to disperse. The Bayesian model was developed using @mcelreath2020statistical as a guide.
+
 
 
 ###### Power analysis (1.2)
 
+We estimated our power to detect differences between conditions at different sample sizes and with different mean changes in distance individuals disperse (Figure 11). We simulated the distance individuals would disperse in the control condition (with averages of 500m, 1000m, or 1500m), and assumed that manipulated individuals might disperse up to 1000m farther. We analyzed these simulated data with the model we will use to analyze the actual data, estimating the contrast in average distance individuals disperse. From the posterior estimates of the model, we extracted both the mean change as well as the ratio of the posterior estimates that were below zero, indicating that there would be a clear difference between control and manipulated birds.
+
+If the mean ratio of estimates below zero is close to 0.5, the model assumes that the distance individuals disperse is similar for control and manipulated birds. If the ratio is close to zero, the model assumes individuals have changed their behavior and disperse earlier when they were manipulated. We find that for changes smaller than 300m, models are likely to assume that there are no differences between control and manipulated individuals even with large sample sizes. Also for the larger increases in dispersal distance, we would need sample sizes of at least 40 (for a 1000m increase) or 60 individuals (for a 300m increase) to reliably detect differences between control and manipulated individuals. If the contrast in dispersal distance of manipulated compared to control individuals is 500m, on average 93% of the posterior of the model based on a sample size of 60 individuals will be larger than zero (81% with a sample size of 20). This means that the model is quite certain there is a contrast that is larger than zero. 
+
+In general, with sample sizes at or above 40 and mean contrasts between manipulated and control individuals of 300m or more, it is likely that the model will indicate that manipulated individuals have changed their behavior. Mean contrasts of less than 300m can still be detected, however there is a high risk that there will be a false negative (67% risk of a false negative with a sample size of 40 when the contrast is 200m). 
+
+To estimate the risk of detecting false positives, we set the mean change in age of dispersal for manipulated individuals compared to control individuals to zero so there was no change. As expected, the average ratio of estimates below zero is close to 0.5 and independent of sample size. With a sample size of 40, <7% of the simulations have a ratio smaller than 0.1, meaning that the risk of having a false positive is low. 
+
+
+```{r tou1.2powersimulation, eval=F}
+library(rethinking)
+library(cmdstanr)
+set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
+rstan_options(auto_write = TRUE)
+#rebuild_cmdstan() #run this if you get an error about a PCH file https://discourse.mc-stan.org/t/struggling-to-get-cmdstan-working-on-mac-os-big-sur/19774/4
+
+### SIMULATE the population
+### We first start with a single population to identify the parameters for the Gamma-Poission distribution.
+# We base this on the information on page 71ff in this thesis: 
+# https://mro.massey.ac.nz/bitstream/handle/10179/1596/02_whole.pdf?sequence=1
+# It suggests that i) almost all individuals disperse, ii) most individuals do not disperse far with the average dispersal distance ~1,000m, and iii) the maximum dispersal distance is ~10,000m. This distribution resembles a gamma-poisson with a mean (lambda) of 1000 and a dispersion (phi) also of 1000
+# plot the distribution
+hist(rgampois(10000,1000,1000),breaks=100)
+# percentage who disperse less than 100m (so are assumed to have remained on the natal territory): 10%
+sum(rgampois(10000,1000,1000)<100)/10000
+
+# If individuals disperse on average 500 meters more, they will have a mean of 1500m rather than 1000m, 2.5% rather than 10% will remain in the natal territory, and the maximum will go up from ~14,000 to ~16,000 meters. 
+
+# Potentially the individuals in this population will not disperse as far or farther than the ones we based the information on. We will accordingly change the dispersal distance for the control population to 500m and to 1500m in the simulation. We will keep the variance parameter the same as the mean (so lambda and phi are both 500, both 1000, or both 1500).
+
+# power analysis: run this simulation with different N_ind, change means, to find the boundaries of where you can detect a difference (run the model and use contrasts) between the two conditions (control/manipulated). Automate the process like Dieter did in xpop figs 5 (line 1133) and 6 (line 1452)?
+
+
+### POWER ANALYSIS: different sample sizes and different mean changes in dispersal distance between control and manipulated conditions
+# We now set our range of likely sample sizes, from a minimum of 10 individuals to a maximum of 60 individuals (half in the control and the other half in the manipulated condition). We draw repeated samples of individuals of that size, with 10 repetitions for each of the 5 sample sizes and each of the 6 mean changes. So 10*6 mean change (=60) for each of the 5 sample sizes, resulting in a total length of samplesizes of 300
+samplesizes<-c(10,20,30,40,60) #c(10,20,30,40,60)
+
+# Set the means you want to compare
+meanchange1<-1000 
+meanchange2<-500
+meanchange3<-300 #e.g., a bird spends 0.6 of its time being rewarded at cafes and dumpsters before the manipulation and then increases this proportion to 0.8 after the manipulation, showing that the manipulation improved their foraging success
+meanchange4<-200
+meanchange5<-100
+meanchange6<-0
+changevariants<-c(meanchange1,meanchange2,meanchange3,meanchange4,meanchange5,meanchange6) #for false negatives
+#changepropvariants<-c(0) #for false positives
+#changepropvariants<-c(meanchangeprop6) #for showing differences
+
+#compare different baseline proportions for how much time these individuals spend when the reward is present before the manipulation
+mean_distance_control<-c(500,1000,1500) #c(0.5,0.6,0.7)
+
+
+#set up data frame where results will be stored
+simresults <- matrix(NA,nrow=900,ncol=6)
+simresults <- data.frame(simresults)
+colnames(simresults) <- c("n","change_mean","repetition","distance_control","proportion_estimates_below_zero","count_estimates_below_zero")
+counter<-1
+
+# run simulations. There are 5 different sample sizes, and for each we have 6 different mean change in proportions that we want to examine, and each will repeat 10 times for a total of 300 samples.
+for (samplesize in 1:length(samplesizes)) {
+  N_ind <- samplesizes[samplesize] #number of grackles per sample size
+  
+  #now run through each of the 6 change variations
+  for (propvariant in 1:length(changevariants)) {
+    
+    #pick the current change variant from the list changevariants
+    currentchangeprop <- changevariants[propvariant]
+    
+    for (baselineprop in 1:3) {
+      #pick the baseline distance variant from the list 
+      currentprop_before <- mean_distance_control[baselineprop]
+      
+      for (repetition in 1:10) {
+        #create data frame to store for each repetition of the simulated data to be analyzed by the model
+   
+        #CONTROL condition
+        distance_control <- round(rgampois(N_ind/2,currentprop_before,currentprop_before),0) 
+        #MANIPULATED condition
+        distance_manipulated<- round(rgampois(N_ind/2,currentprop_before+currentchangeprop,currentprop_before),0) 
+       
+        
+        ### run a STAN model to see whether the before and after proportions are estimated to be different from each other
+        #sets up the data sheet with the simulated data that the model will run on
+        dat <- list(
+          response = c(distance_control,distance_manipulated),
+          condition = c(rep(1,N_ind/2),rep(2,N_ind/2)) #1 refers to control and 2 to manipulated
+        )
+        
+        # Our MODEL, which will estimate a different mean and variance of phi for each site 
+        #(note: had to add force_recompile bc kept giving me an error and wouldn't finish running. See https://github.com/rmcelreath/rethinking/issues/338)
+        s1 <- ulam(
+          alist(
+            response ~ dgampois(lambda,phi),
+            lambda <- g[condition],
+            # fixed priors
+            g[condition] ~ normal(1000,1000),
+            phi ~ normal(1000,1500)
+          ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
+        
+        #run a CONTRAST to determine whether there is a difference between before (g1) and after (g2) (subtract g1 before from g2 after). Yes if all values for diff_p on one side of zero (want probability scale because that is the scale we used in the simulation)
+        post <- extract.samples(s1)
+        diff_g <- post$g[,2] - post$g[,1] #log-odds difference p.341 McElreath 2020
+
+        # enter all of the results into the data sheet
+        simresults[counter,]$n <- N_ind
+        simresults[counter,]$change_mean <- currentchangeprop
+        simresults[counter,]$repetition <- repetition
+        simresults[counter,]$distance_control <- currentprop_before
+        simresults[counter,]$proportion_estimates_below_zero <- sum(diff_g<0)/length(diff_g)
+        simresults[counter,]$count_estimates_below_zero <- sum(diff_g<0)
+        counter<-counter+1 
+        print(c(counter,"out of",10*length(samplesizes)*length(changevariants)*length(distance_control)))
+      }
+    }
+  }
+}
+
+#write.csv(simresults,file="simresults20plus.csv") #put the outputs into a csv file so don't have to run the model again...it takes hours
+
+## Prep a figure to show how sample size and mean change prop makes a difference in the results. Get posterior values for particular sample sizes and change props. Set samplesize (20 or 60), changepropvariants (0.1 or 0.025), and prop_before (always 0.6) to just one number and run the model. Generate the output, write to csv. Repeat for other model variants
+#write.csv(diff_p,file="diff_p20changeprop0.1.csv")
+#write.csv(diff_p,file="diff_p60changeprop0.1.csv")
+#write.csv(diff_p,file="diff_p20changeprop0.025.csv")
+#write.csv(diff_p,file="diff_p60changeprop0.025.csv")
+```
+
+```{r tou1.2simulationfiguresamplesize, eval=F, messages=F}
+library(rethinking)
+library(cmdstanr)
+set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
+
+#load the data sheet that was made from the simulation in the previous R chunk
+d <- read.csv("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/m1simresults_toutouawidispersaldistance.csv", header = TRUE, sep = ",", stringsAsFactors = FALSE)
+#head(d)
+
+# Set up the data sheet for the model
+dat <- list(
+  proportion_estimates_below_zero = as.numeric(d$proportion_estimates_below_zero),
+  count_estimates_below_zero = as.numeric(d$count_estimates_below_zero),
+  change_mean = as.numeric(as.factor(d$change_mean)),
+  samplesize = as.integer(as.factor(d$n))
+)
+
+# We run the STAN model - it is a binomial model that assumes that the probability to estimate a difference depends on an interaction between the sample size and the difference between the conditions (before/after). These two models do the same thing with different versions of the response variable. In m_samplesize_diffs, the response variable is already a proportion. In m_samplesize_diffscount, the response variable is a count and the model turns it into a proportion. We ended up using the latter
+#m_samplesize_diffs <- ulam(
+#    alist(
+#        proportion_estimates_below_zero ~ dnorm(mu,sigma),
+#        mu <- a[samplesize] + b[samplesize]*changeprop_mean,
+#        a[samplesize] ~ dnorm(a_bar,sigma_a),
+#        a_bar~dnorm(0,1.5),
+#        sigma_a~dexp(1),
+#        sigma~dexp(1),
+#        b[samplesize]~dnorm(0,1.5)
+#    ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
+
+m_samplesize_diffscount <- ulam(
+  alist(
+    count_estimates_below_zero~dbinom(2000,p),
+    logit(p) <- a[samplesize]-b[samplesize]*change_mean,
+    a[samplesize]~dnorm(a_bar,sigma_a),
+    a_bar~dnorm(0,1.5),
+    sigma_a~dexp(1),
+    b[samplesize]~dnorm(0,1.5)
+  ),data=dat, log_lik=TRUE, messages=FALSE,cmdstan=T)
+
+# Extract the posterior estimates from this STAN model
+precis_output<-precis( m_samplesize_diffscount , depth=2 )
+
+# Plot the predictions for the different sample sizes as separate lines = COUNT out of 2000
+plot(NULL,xlim=c(0.5,6.5),ylim=c(0.0,0.8),pch=1,ann=F,frame.plot=F,cex=1.5,xaxt="n")
+axis(side=1,at=c(1,2,3,4,5,6),labels=c(0,100,200,300,500,1000))
+
+mu_10<- link( m_samplesize_diffscount , data=data.frame( change_mean=as.numeric(as.factor(unique(d$change_mean))),samplesize=rep(1,length(unique(d$change_mean))) ) )
+mu_10_mean <- apply( mu_10 , 2 , mean )
+mu_10_ci <- apply( mu_10 , 2 , PI , prob=0.97 )
+shade( mu_10_ci , as.numeric(as.factor(unique(d$change_mean))) , col=col.alpha("blue",0.7) )
+lines(x=c(0.96,0.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(1.96,1.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 100,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 100,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(2.96,2.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 200,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(3.96,3.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 300,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(4.96,4.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 500,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 500,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+lines(x=c(5.96,5.96),y=c(min(d[d$n %in% 10 & d$change_mean %in% 1000,]$proportion_estimates_below_zero),max(d[d$n %in% 10 & d$change_mean %in% 1000,]$proportion_estimates_below_zero)),col=col.alpha("blue",0.5))
+
+mu_20<- link( m_samplesize_diffscount , data=data.frame( change_mean=as.numeric(as.factor(unique(d$change_mean))),samplesize=rep(2,length(unique(d$change_mean))) ) )
+mu_20_mean <- apply( mu_20 , 2 , mean )
+mu_20_ci <- apply( mu_20 , 2 , PI , prob=0.97 )
+shade( mu_20_ci , as.numeric(as.factor(unique(d$change_mean))) , col=col.alpha("orange",0.7) )
+lines(x=c(0.98,0.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(1.98,1.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 100,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 100,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(2.98,2.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 200,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(3.98,3.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 300,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(4.98,4.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 500,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 500,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+lines(x=c(5.98,5.98),y=c(min(d[d$n %in% 20 & d$change_mean %in% 1000,]$proportion_estimates_below_zero),max(d[d$n %in% 20 & d$change_mean %in% 1000,]$proportion_estimates_below_zero)),col=col.alpha("orange",0.5))
+
+mu_30<- link( m_samplesize_diffscount , data=data.frame( change_mean=as.numeric(as.factor(unique(d$change_mean))),samplesize=rep(3,length(unique(d$change_mean))) ) )
+mu_30_mean <- apply( mu_30 , 2 , mean )
+mu_30_ci <- apply( mu_30 , 2 , PI , prob=0.97 )
+shade( mu_30_ci , as.numeric(as.factor(unique(d$change_mean))) , col=col.alpha("skyblue",0.7) )
+lines(x=c(1,1),y=c(min(d[d$n %in% 30 & d$change_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(2,2),y=c(min(d[d$n %in% 30 & d$change_mean %in% 100,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 100,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(3,3),y=c(min(d[d$n %in% 30 & d$change_mean %in% 200,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(4,4),y=c(min(d[d$n %in% 30 & d$change_mean %in% 300,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(5,5),y=c(min(d[d$n %in% 30 & d$change_mean %in% 500,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 500,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+lines(x=c(6,6),y=c(min(d[d$n %in% 30 & d$change_mean %in% 1000,]$proportion_estimates_below_zero),max(d[d$n %in% 30 & d$change_mean %in% 1000,]$proportion_estimates_below_zero)),col=col.alpha("skyblue",0.5))
+
+mu_40<- link( m_samplesize_diffscount , data=data.frame( change_mean=as.numeric(as.factor(unique(d$change_mean))),samplesize=rep(4,length(unique(d$change_mean))) ) )
+mu_40_mean <- apply( mu_40 , 2 , mean )
+mu_40_ci <- apply( mu_40 , 2 , PI , prob=0.97 )
+shade( mu_40_ci , as.numeric(as.factor(unique(d$change_mean))) , col=col.alpha("#213940",0.7) )
+lines(x=c(1.02,1.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(2.02,2.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 100,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 100,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(3.02,3.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 200,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(4.02,4.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 300,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(5.02,5.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 500,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 500,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+lines(x=c(6.02,6.02),y=c(min(d[d$n %in% 40 & d$change_mean %in% 1000,]$proportion_estimates_below_zero),max(d[d$n %in% 40 & d$change_mean %in% 1000,]$proportion_estimates_below_zero)),col=col.alpha("#213940",0.5))
+
+mu_60<- link( m_samplesize_diffscount , data=data.frame( change_mean=as.numeric(as.factor(unique(d$change_mean))),samplesize=rep(5,length(unique(d$change_mean))) ) )
+mu_60_mean <- apply( mu_60 , 2 , mean )
+mu_60_ci <- apply( mu_60 , 2 , PI , prob=0.97 )
+shade( mu_60_ci , as.numeric(as.factor(unique(d$change_mean))) , col=col.alpha("red",0.7) )
+lines(x=c(1.04,1.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 0,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 0,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(2.04,2.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 100,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 100,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(3.04,3.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 200,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(4.04,4.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 300,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 300,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(5.04,5.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 500,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 500,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+lines(x=c(6.04,6.04),y=c(min(d[d$n %in% 60 & d$change_mean %in% 1000,]$proportion_estimates_below_zero),max(d[d$n %in% 60 & d$change_mean %in% 1000,]$proportion_estimates_below_zero)),col=col.alpha("red",0.5))
+
+legend(x="topright",legend=c(lty2="10",lty1="20",lty3="30",lty2="40",lty3="60"),lty=c(1,1,1,1,1),lwd=c(5,5,5,5,5),col=c(col.alpha("blue",0.4),col.alpha("orange",0.4),col.alpha("skyblue",0.4),col.alpha("#213940",0.4),col.alpha("red",0.4)),cex=1,bty="n")
+
+# Axis labels (side 1=x axis, side 2=y axis)
+mtext("Sample size",side=3,line=-1,at=5.5)
+mtext("Power to detect differences between conditions",side=3,line=1,at=3.5,cex=1.5)
+mtext("Increase in dispersal distance (meters) of manipulated vs control individuals",side=1,line=3, cex=1.2)
+mtext("Ratio of estimates below zero",side=2,line=3, cex=1.2)
+
+#93% of the posterior mass is above zero for a 500m or larger mean change in proportion between before and after when the sample size is 60, 86% for n=40, 83% for n=30, and 81% for n=20
+#mu_10_ci #82%. 3rd column from the right (column 4) for the 0.1 category on the x axis (ordered by unique(d$changeprop_mean))
+# 1-mu_60_mean[2]
+# 1-mu_30_mean[2]
+
+#sum(d[d$n %in% 40 & d$change_mean %in% 0,]$proportion_estimates_below_zero<0.1) #2 values are <0.1 (out of 30)
+#length(d[d$n %in% 40 & d$change_mean %in% 0,]$proportion_estimates_below_zero) #30 values total
+
+```
+
+&nbsp;
+
+<img width="100%" src="m1FigPowerAnalysisTouDistance.png">
+
+**Figure 11** Curves of the mean ratio of estimates below zero (vertical lines show the minimum and maximum ratios), which illustrates the power we have to detect differences between conditions (control vs. manipulated) in the distance of dispersal at different sample sizes. 
+
+&nbsp;
 
 
 ###### Run this model on the actual data (1.2)
+
+Run the code below to determine whether there were differences between the control and manipulated conditions in the distance of dispersal. A contrast will be run to determine whether there is a difference between the conditions: if all values of the confidence interval are on one side of zero, then there was a difference; if the confidence interval crosses zero, then there was no difference.
+
+```{r tou1.2model, eval=F}
+library(rethinking)
+library(cmdstanr)
+set_ulam_cmdstan(TRUE) #makes it so ulam always runs with cmdstan
+
+# load data sheet
+d <- read.csv(url(""), header=T, sep=",", stringsAsFactors=F)
+
+# Set up the data for the analysis. This assumes you have a variable "dispersaldistance" that reports for each individual how many meters they dispersed, and a variable "condition" that indicates whether the individual is part of the control or the manipulated group 
+dat <- list(
+          response = as.numeric(d$dispersaldistance),
+          condition = as.numeric(as.factor(d$condition)) #1 refers to control and 2 to manipulated
+        )
+        
+# Our MODEL, which will estimate a different mean and variance of phi for each site 
+        #(note: had to add force_recompile bc kept giving me an error and wouldn't finish running. See https://github.com/rmcelreath/rethinking/issues/338)
+        s1 <- ulam(
+          alist(
+            response ~ dgampois(lambda,phi),
+            lambda <- g[condition],
+            # fixed priors
+            g[condition] ~ normal(1000,1000),
+            phi ~ normal(1000,1500)
+          ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
+
+#model output: pay attention to control (g1) and manipulated (g2)
+#precis(m1,depth=2)
+
+#run a CONTRAST to determine whether there is a difference between control (g1) and manipulated (g2). Yes if all values on one side of zero
+post <- extract.samples(m1)
+diff_g <- post$g[,1] - post$g[,2] #log-odds difference p.341
+precis( diff_g )
+```
 
 
 
